Introduce new property to Payment, confimed indicating the payment status

--- a/ClientDashboard_GUI/src/app/client-payments/client-payments.component.html
+++ b/ClientDashboard_GUI/src/app/client-payments/client-payments.component.html
@@ -70,6 +70,9 @@
                  <th pSortableColumn="paymentDate" style="width:20%; text-align: center;" >
                     Payment Date <p-sortIcon field="paymentDate" />
                 </th>
+                <th pSortableColumn="paymentDate" style="width:20%; text-align: center;" >
+                    Status <p-sortIcon field="paymentDate" />
+                </th>
             </tr>
         </ng-template>
         <ng-template #body let-payment let-editing="editing" let-ri="rowIndex">
