--- a/ClientDashboard_GUI/src/app/client-payments/client-payments.component.html
+++ b/ClientDashboard_GUI/src/app/client-payments/client-payments.component.html
@@ -32,10 +32,6 @@
                         <p-inputnumber inputId="amount" [(ngModel)]="amount" mode="currency" [currency]="currency || 'GBP'" class="flex-auto" />
                     </div>
                     <div class="flex items-center gap-4 mb-8">
-                        <label for="currency" class="font-semibold w-24">Currency</label>
-                        <input pInputText id="currency" [(ngModel)]="currency" class="flex-auto" autocomplete="off" />
-                    </div>
-                    <div class="flex items-center gap-4 mb-8">
                         <label for="session-count" class="font-semibold w-24">Sessions</label>
                         <p-inputnumber inputId="session-count" [(ngModel)]="numberOfSessions" class="flex-auto" />
                     </div>
@@ -43,10 +39,15 @@
                         <label for="payment-date" class="font-semibold w-24">Payment Date</label>
                         <p-datepicker [appendTo]="'body'" [(ngModel)]="paymentDate" dateFormat="dd/mm/yy" />
                     </div>
+                     <div class="flex items-center gap-4 mb-4">
+                        <label for="client-name" class="font-semibold w-24">Payment Status</label>
+                        <p-autocomplete [appendTo]="'body'" [(ngModel)]="selectedStatus" [dropdown]="true" [suggestions]="paymentStatuses" optionLabel="name" optionValue="name" (onDropdownClick)="gatherStatuses()"/>
+                    </div>
                     <div class="flex justify-end gap-2">
                         <p-button label="Cancel" severity="secondary" (click)="addDialogVisible = false" />
                         <p-button label="Save" (click)="addNewPayment()" />
                     </div>
+                   
                 </p-dialog>
             </div>
             <div class="mb-4">
@@ -126,6 +127,24 @@
                     </ng-template>
                     <ng-template #output>
                         {{payment.paymentDate | date:'dd/MM/yyyy'}}
+                    </ng-template>
+                </p-cellEditor>
+              </td>
+
+              <td class="payment-td">
+                <p-cellEditor>
+                    <ng-template #input>
+                        <p-select
+                            [options]="paymentStatuses"
+                          appendTo="body"
+                            [(ngModel)]= "payment.confirmed"
+                            [style]="{'width':'100%'}" 
+                            />
+                    </ng-template>
+                    <ng-template #output>
+                         <p-tag
+                            [value]="getActivityLabel(payment.confirmed)"
+                            [severity]="getActivities(payment.confirmed)" />
                     </ng-template>
                 </p-cellEditor>
               </td>
