--- a/ClientDashboard_GUI/src/app/client-payments/client-payments.component.html
+++ b/ClientDashboard_GUI/src/app/client-payments/client-payments.component.html
@@ -41,11 +41,11 @@
                     </div>
                      <div class="flex items-center gap-4 mb-4">
                         <label for="client-name" class="font-semibold w-24">Payment Status</label>
-                        <p-autocomplete [appendTo]="'body'" [(ngModel)]="selectedStatus" [dropdown]="true" [suggestions]="paymentStatuses" optionLabel="name" optionValue="name" (onDropdownClick)="gatherStatuses()"/>
+                        <p-autocomplete [appendTo]="'body'" [(ngModel)]="selectedStatus" [dropdown]="true" [suggestions]="paymentStatuses" optionLabel="name" (onDropdownClick)="gatherStatuses()"/>
                     </div>
                     <div class="flex justify-end gap-2">
                         <p-button label="Cancel" severity="secondary" (click)="addDialogVisible = false" />
-                        <p-button label="Save" (click)="addNewPayment(selectedClient!.id, amount, numberOfSessions, paymentDate!, selectedStatus!.value)" />
+                        <p-button label="Save" (click)="addNewPayment(selectedClient.id, amount, numberOfSessions, paymentDate!, selectedStatus)" />
                     </div>
                    
                 </p-dialog>
