Correctly un-embed dialogs from within table components, allowing dialog opens to be external from table interactable components

--- a/ClientDashboard_GUI/src/app/client-payments/client-payments.component.css
+++ b/ClientDashboard_GUI/src/app/client-payments/client-payments.component.css
@@ -9,6 +9,10 @@
     padding: 0.5rem ;
 }
 
+.delete-message {
+  margin-bottom: 20px;
+}
+
 /* Amount column - currency input */
 ::ng-deep .payment-amount-input {
     width: 100px ;
