--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -4,26 +4,40 @@
 @else {
 
 <p-toast />
+
+  <!-- Add Dialog - Moved outside table -->
+  <p-dialog header="Add new Client" [modal]="true" [(visible)]="addDialogVisible" [style]="{ width: '25rem' }">
+      <span class="p-text-secondary block mb-8">Enter new client details:</span>
+      <div class="flex items-center gap-4 mb-4">
+          <label for="clientName" class="font-semibold w-24">Client Name</label>
+          <input pInputText [(ngModel)]="newClientName" id="clientName" class="flex-auto" autocomplete="off" />
+      </div>
+      <div class="flex items-center gap-4 mb-8">
+          <label for="totalBlockSessions" class="font-semibold w-24">Total Block Sessions</label>
+          <p-inputnumber inputId="totalBlockSessions" [(ngModel)]="newTotalBlockSessions" id="totalBlockSessions" class="flex-auto" autocomplete="off" />
+      </div>
+      <div class="flex justify-end gap-2">
+          <p-button label="Cancel" severity="secondary" (click)="addDialogVisible = false" />
+          <p-button label="Save" (click)="addNewClient(newClientName, newTotalBlockSessions)"/>
+      </div>
+  </p-dialog>
+
+  <!-- Delete Dialog - Moved outside table -->
+  <p-dialog header="Delete Client" [modal]="true" [(visible)]="deleteDialogVisible" [style]="{ width: '25rem' }">
+    <div class="delete-message">
+      <span class="p-text-secondary block mb-8">Are you sure you want to delete client {{deleteClientName}} from your table?</span>
+    </div>
+      <div class="flex justify-end gap-2">
+          <p-button label="Cancel" severity="secondary" (click)="deleteDialogVisible = false" />
+          <p-button label="Delete" (click)=" onRowDelete(deleteClientId)" />
+      </div>
+  </p-dialog>
+
   <div class="table-container">
   <p-table [value]="clients" dataKey="id" editMode="row" [tableStyle]="{ 'min-width': '50rem' }">
       <ng-template #header>
         <div class="card flex justify-center">
           <p-button icon="pi pi-plus" label="New" severity="secondary" (onClick)="showDialogForAdd()"></p-button>
-          <p-dialog header="Add new Client" [modal]="true" [(visible)]="addDialogVisible" [style]="{ width: '25rem' }">
-              <span class="p-text-secondary block mb-8">Enter new client details:</span>
-              <div class="flex items-center gap-4 mb-4">
-                  <label for="clientName" class="font-semibold w-24">Client Name</label>
-                  <input pInputText [(ngModel)]="newClientName" id="clientName" class="flex-auto" autocomplete="off" />
-              </div>
-              <div class="flex items-center gap-4 mb-8">
-                  <label for="totalBlockSessions" class="font-semibold w-24">Total Block Sessions</label>
-                  <p-inputnumber inputId="totalBlockSessions" [(ngModel)]="newTotalBlockSessions" id="totalBlockSessions" class="flex-auto" autocomplete="off" />
-              </div>
-              <div class="flex justify-end gap-2">
-                  <p-button label="Cancel" severity="secondary" (click)="addDialogVisible = false" />
-                  <p-button label="Save" (click)="addNewClient(newClientName, newTotalBlockSessions)"/>
-              </div>
-          </p-dialog> 
         </div>
           <tr>
               <th pSortableColumn="firstName" style="width:25%; text-align: center;">
@@ -150,29 +164,17 @@
                         rounded
                         severity="secondary"
                     ></button>
-                    <div class="card flex justify-center">
-                      <p-button
+                    <button
                         *ngIf="editing"
                         pButton
                         pRipple
                         type="button"
-                        pCancelEditableRow
                         icon="pi pi-trash"
                         (click)="showDialogForDelete(client.id, client.name)"
                         text
                         rounded
                         severity="secondary"
-                    ></p-button>
-                      <p-dialog header="Delete Client" [modal]="true" [(visible)]="deleteDialogVisible" [style]="{ width: '25rem' }">
-                        <div class="delete-message">
-                          <span class="p-text-secondary block mb-8">Are you sure you want to delete client {{deleteClientName}} from your table?</span>
-                        </div>
-                          <div class="flex justify-end gap-2">
-                              <p-button label="Cancel" severity="secondary" (click)="deleteDialogVisible = false" />
-                              <p-button label="Delete" (click)=" onRowDelete(deleteClientId)" />
-                          </div>
-                      </p-dialog>
-                    </div>
+                    ></button>
                     
                 </div>
             </td>
