Update property from name to label to allow for the status display within update toggle

--- a/ClientDashboard_GUI/src/app/client-payments/client-payments.component.html
+++ b/ClientDashboard_GUI/src/app/client-payments/client-payments.component.html
@@ -29,7 +29,7 @@
                 [appendTo]="'body'" 
                 [(ngModel)]="selectedStatus" 
                 [options]="paymentStatuses" 
-                optionLabel="name" 
+                optionLabel="label" 
                 placeholder="Select Status"
                 [style]="{'width':'50%'}" />
         </div>
