Create search field by client name within clientPayments along with minor layout adjustment

--- a/ClientDashboard_GUI/src/app/client-payments/client-payments.component.css
+++ b/ClientDashboard_GUI/src/app/client-payments/client-payments.component.css
@@ -9,6 +9,16 @@
     padding: 0.5rem ;
 }
 
+.search-field {
+    margin-right: 80px;
+}
+
+
+.payment-caption {
+    display: flex;
+    justify-content: space-between;
+}
+
 .delete-message {
   margin-bottom: 20px;
 }
