--- a/ClientDashboard_GUI/src/app/client-payments/client-payments.component.css
+++ b/ClientDashboard_GUI/src/app/client-payments/client-payments.component.css
@@ -19,6 +19,12 @@
     justify-content: space-between;
 }
 
+.auto-setting-button {
+    margin-left: 40px;
+    margin-bottom: -30px;
+    margin-top: -30px;
+}
+
 .delete-message {
   margin-bottom: 20px;
 }
