--- a/ClientDashboard_GUI/src/app/client-payments/client-payments.component.html
+++ b/ClientDashboard_GUI/src/app/client-payments/client-payments.component.html
@@ -4,7 +4,7 @@
 @else {
     <p-toast />
 
-    <!-- Add Dialog - Moved outside table -->
+    <!-- Add Dialog-->
     <p-dialog header="Add new Payment" [modal]="true" [(visible)]="addDialogVisible" [style]="{ width: '25rem', height: 'auto'}" >
         <span class="p-text-secondary block mb-8">Enter new payment details:</span>
         <div class="flex items-center gap-4 mb-4">
@@ -39,7 +39,40 @@
         </div>
     </p-dialog>
 
-    <!-- Delete Dialog - Moved outside table -->
+    <!-- Auto Payment Setting Dialog -->
+    <p-dialog header="Set up Automatic Client Payment creation" [modal]="true" [(visible)]="autoPaymentSettingVisible" [style]="{ width: '25rem' }">
+        <div class="info-button-container">
+                    <p-button 
+                        type="button" 
+                        icon="pi pi-exclamation-circle" 
+                        severity="secondary" 
+                        size="small" 
+                        (onClick)="toggle($event)" 
+                        styleClass="info-button" />
+                    <p-popover 
+                        #op 
+                        [appendTo]="'body'"
+                        [style]="{ 'max-width': '300px' }">
+                        <div class="popover-content">
+                            <p class="popover-text">{{autoPaymentInfoText}}</p>
+                        </div>
+                    </p-popover>
+                </div>
+        <div class="flex items-center gap-4 mb-8">
+                    <label for="email" class="font-semibold w-24">Toggle Automatic Client Payments</label>
+                    <p-togglebutton 
+                        [(ngModel)]="automaticPaymentsChecked" 
+                        styleClass="w-full sm:w-40" 
+                        aria-label="Confirmation">
+                    </p-togglebutton>
+                </div>
+        <div class="flex justify-end gap-2">
+            <p-button label="Cancel" severity="secondary" (click)="autoPaymentSettingVisible = false" />
+            <p-button label="Save" (click)="automaticPaymentsStatusSave()" />
+        </div>
+    </p-dialog>
+
+    <!-- Delete Dialog -->
     <p-dialog header="Delete Payment" [modal]="true" [(visible)]="deleteDialogVisible" [style]="{ width: '25rem' }">
         <div class="delete-message">
           <span class="p-text-secondary block mb-8">Are you sure you want to delete this payment record from your table?</span>
@@ -66,11 +99,25 @@
         dataKey="id"
         editMode="row"
     >
-         <ng-template #caption>
+        <ng-template #caption>
         <div class="payment-caption">
             <div class="add-payment-button">
+
                 <p-button icon="pi pi-plus" (click)="showDialogForAdd()" severity="secondary" label="New" />
+                <p-button
+                class="auto-setting-button"
+                pButton
+                pRipple
+                type="button"
+                icon="pi pi-cog"
+                (click)="showDialogForAutoPaymentSetting()"
+                text
+                rounded
+                size="large"
+                severity="secondary">
+                </p-button>
             </div>
+
             <div class="search-field">
             <p-iconfield iconPosition="left" class="ml-auto">
                 <p-inputicon>
