--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -16,9 +16,13 @@
           <label for="totalBlockSessions" class="font-semibold w-24">Total Block Sessions</label>
           <p-inputnumber inputId="totalBlockSessions" [(ngModel)]="newTotalBlockSessions" id="totalBlockSessions" class="flex-auto" autocomplete="off" />
       </div>
+       <div class="flex items-center gap-4 mb-4">
+          <label for="phoneNumber" class="font-semibold w-24">Phone Number</label>
+          <input pInputText [(ngModel)]="newPhoneNumber" id="phoneNumber" class="flex-auto" autocomplete="off" />
+      </div>
       <div class="flex justify-end gap-2">
           <p-button label="Cancel" severity="secondary" (click)="addDialogVisible = false" />
-          <p-button label="Save" (click)="addNewClient(newClientName, newTotalBlockSessions)"/>
+          <p-button label="Save" (click)="addNewClient(newClientName, newTotalBlockSessions, newPhoneNumber)"/>
       </div>
   </p-dialog>
 
