Sync frontend now enabling trainer to update individual client phone numbers

--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -47,7 +47,7 @@
             [(ngModel)]="editingPhoneNumber" 
             id="phoneNumber" 
             class="flex-auto" 
-            placeholder="+44 7700 900000"
+            placeholder="+447700900000"
             autocomplete="off" 
         />
     </div>
