Adapt front end workout-update-dto along with save workout method to adhere with new duration property

--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -206,7 +206,7 @@
                             [(ngModel)]= "workout.duration" />
                     </ng-template>
                     <ng-template #output>
-                        {{workout.duration}}
+                        {{workout.duration + ' mins'}}
                     </ng-template>
                 </p-cellEditor>
               </td>
